--- a/festival-information-specialist/popular.html
+++ b/festival-information-specialist/popular.html
@@ -23,13 +23,19 @@
         </header>
         <main>
         <h1>Popular in your area</h1><br>
-        <p>These are te festivals with the highest level of popularity in your area</p><br><br>
-        <a class="cta" href="search.html"><button>Search for your next festival!</button></a><br><br>
-        <br><p>The festivals shown below have all had attendees originate from our site!</p><br><br>
-        <img src="/festival-information-specialist/images/fest1.png" alt="Image of a festival" width="400" height="200">
-        <img src="/festival-information-specialist/images/fest2.png" alt="Image of a festival" width="400" height="200">
-        <img src="/festival-information-specialist/images/fest3.png" alt="Image of a festival" width="400" height="200">
-        <img src="/festival-information-specialist/images/fest4.png" alt="Image of a festival" width="400" height="200">
+        <p>These are the festivals with the highest level of popularity in your area</p><br><br>
+        <table>
+            <tr>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+            </tr>
+        </table>
         </main>
         </div>
         <footer id="footer">
