--- a/festival-information-specialist/popular.html
+++ b/festival-information-specialist/popular.html
@@ -26,7 +26,7 @@
         <p>These are the festivals with the highest level of popularity in your area</p><br><br>
         <table>
             <tr>
-                <td></td>
+                <td><a href="/festival-information-specialist/images/fest1.png"></a></td>
                 <td></td>
                 <td></td>
                 <td></td>
