--- a/festival-information-specialist/popular.html
+++ b/festival-information-specialist/popular.html
@@ -27,7 +27,7 @@
         <table>
             <tr>
                 <td><img src="/festival-information-specialist/images/fest1.png" alt="Festival Image 1" width="350" height="200"></td>
-                <td></td>
+                <td><img src="/festival-information-specialist/images/fest2.png" alt="Festival Image 2" width="350" height="200"></td>
                 <td></td>
                 <td></td>
                 <td></td>
