--- a/festival-information-specialist/popular.html
+++ b/festival-information-specialist/popular.html
@@ -27,8 +27,9 @@
         <table>
             <tr>
                 <td><img src="/festival-information-specialist/images/fest1.png" alt="Festival Image 1" width="350" height="200"></td>
+                <td>Bath Festival | 9th Feb | £57.99<br>
+                    This is an extremely popular festival located in the town of Bath. The previous edition of this festival attracted a predicted 14,000 attendees, assuring you that you will be in the presence of a large number of likeminded individuals.</td>
                 <td><img src="/festival-information-specialist/images/fest2.png" alt="Festival Image 2" width="350" height="200"></td>
-                <td></td>
                 <td></td>
                 <td></td>
                 <td></td>
