--- a/festival-information-specialist/popular.html
+++ b/festival-information-specialist/popular.html
@@ -32,7 +32,7 @@
                 <tr>
                     <td><img src="/festival-information-specialist/images/fest2.png" alt="Festival Image 2" width="350" height="200"></td>
                     <td>Top Notch Festival | 14th Feb | £99.99<br>
-                    THis is a festival where fans of 'Top Notch Audio' collate to admire the high quality product they are there to showcase. An approximated 1,500 fans arrived for the previous iteration of this event.</td></tr>
+                    This is a festival where fans of 'Top Notch Audio' collate to admire the high quality product they are there to showcase. An approximated 1,500 fans arrived for the previous iteration of this event.</td></tr>
                 <tr>
                     <td></td>
                     <td></td></tr>
