--- a/festival-information-specialist/popular.html
+++ b/festival-information-specialist/popular.html
@@ -34,8 +34,9 @@
                     <td>Top Notch Festival | 14th Feb | £99.99<br>
                     This is a festival where fans of 'Top Notch Audio' collate to admire the high quality product they are there to showcase. An approximated 1,500 fans arrived for the previous iteration of this event.</td></tr>
                 <tr>
-                    <td></td>
-                    <td></td></tr>
+                    <td><img src="/festival-information-specialist/images/fest3.png" alt="Festival Image 3" width="350" height="200"></td>
+                    <td>Cheapo Festival | 17th Mar | £24.99<br>
+                    This is a festival for those who dislike the atmosphere of larger festivals such as Glastonbury, as well as the price.</td></tr>
                 <tr>    
                     <td></td>
                     <td></td></tr>
