--- a/festival-information-specialist/popular.html
+++ b/festival-information-specialist/popular.html
@@ -38,8 +38,9 @@
                     <td>Cheapo Festival | 17th Mar | £24.99<br>
                     This is a festival for those who dislike the atmosphere of larger festivals such as Glastonbury, as well as the price.</td></tr>
                 <tr>    
-                    <td></td>
-                    <td></td></tr>
+                    <td><img src="/festival-information-specialist/images/fest5.png" alt="Festival Image 5" width="350" height="200"></td>
+                    <td>Fyre Festival 2 | 2nd Apr | £4,936,924<br>
+                    Billy broke out. This is Fyre Festival 2, complete with all the 'luxury tents' and portable toilets you could ever need. Oh, and the artists might actually turn up this time. No guarantees or refunds.</td></tr>
         </table>
         </main>
         </div>
