--- a/404.html
+++ b/404.html
@@ -21,7 +21,7 @@
         </header>
         <main>
         <h1>Error 404</h1>
-        <p>You've reached a page that doesn't exist! Try the links in the header above, or use the contact us button if you have any issues.</p>
+        <p>You've reached a page that doesn't exist! Someone must've partied too hard and thrown it in the bin. Try the links in the header above, or use the contact us button if you have any issues.</p>
         </main>
     </body>
 </html>
