--- a/index.html
+++ b/index.html
@@ -76,6 +76,12 @@
 			  Mastodon
 				  </a>
 			  </div>
+        <a href="https://fifthsplit.com/festival-information-specialist/">
+          <div class="treeElement">
+            <img class="treeImage" src="/android-chrome-512x512.png">
+            Looking for Festival Information Specialist?
+            </div>
+          </a>
           </table>
           </div>
           </td>
