--- a/index.html
+++ b/index.html
@@ -1,94 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#000000" />
-<link rel="stylesheet" href="styles/index.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Atkinson+Hyperlegible:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet"> 
-	<link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-<title>FifthSplit.com</title>
-</head>
-<body>
-  <div class="gradient"></div>
-  <table class="vcenter" border="0">
-    <tbody>
-      <tr>
-        <td>
-          <img class="logo" src="assets/logo.png" alt="dcrLogo">
-          <div class="widthLimiter">
-          <a href="https://www.youtube.com/@FifthSplit">
-            <div class="treeElement">
-              <img class="treeImage" src="assets/ytLogo.png">
-              YouTube
-              </div>
-            </a>
-            <a href="https://twitter.com/dcrracing_">
-              <div class="treeElement">
-                <img class="treeImage" src="assets/twitterLogo.png">
-                Twitter
-                </div>
-              </a>
-              <a href="https://www.instagram.com/danielcattonracing/">
-                <div class="treeElement">
-                  <img class="treeImage" src="assets/instaLogo.png">
-                  Instagram
-                  </div>
-                </a>
-                <a href="https://twitch.tv/danielcatton">
-            <div class="treeElement">
-              <img class="treeImage" src="assets/twitchLogo.png">
-              Twitch
-              </div>
-            </a>
-            <a href="https://steamcommunity.com/id/fifthsplit">
-            <div class="treeElement">
-              <img class="treeImage" src="assets/steamLogo.png">
-              Steam
-              </div>
-            </a>
-            <a href="https://www.iracing.com/membership/?refid=493870">
-            <div class="treeElement">
-              <img class="treeImage" src="assets/iracingLogo.png">
-              iRacing Referral
-              </div>
-            </a>
-            <a href="https://github.com/danielcatton/">
-            <div class="treeElement">
-              <img class="treeImage" src="assets/githubLogo.png">
-              GitHub
-              </div>
-            </a>
-            <a href="https://stats.fm/danielcatton/">
-              <div class="treeElement">
-                <img class="treeImage" src="assets/spotifyLogo.png">
-                Spotify
-                </div>
-              </a>
-		  <a rel="me" href="https://social.vivaldi.net/@FifthSplit">
-			  <div class="treeElement">
-				  <img class="treeImage" src="assets/mastodonLogo.png">
-			  Mastodon
-				  </a>
-			  </div>
-        <a href="https://fifthsplit.com/festival-information-specialist/">
-          <div class="treeElement">
-            <img class="treeImage" src="/android-chrome-512x512.png">
-            Looking for Festival Information Specialist?
-            </div>
-          </a>
-          </table>
-          </div>
-          </td>
-        </tr>
-        </tbody>
-        </body>
-        <footer>
-          <p>2015-2022 FifthSplit.com | v1.2</p>
+
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title>Home - FifthSplit.com</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="/festival-information-specialist/styles/styles.css">
+    </head>
+    <body>
+        <div id="page-container">
+            <div id="content-wrap">
+            <header>
+            <img class="logo" src="/assets/logo.png" alt="FifthSplit Logo">
+            <nav>
+                <ul class="nav__links" >
+                    <li><a href="index.html">Home</a></li><li><a href="projects.html">Projects</a></li><li><a href="recents.html">Recent Videos</a></li><li><a href="about.html">About</a></li><a href="socials.html">Socials</a></li>
+                </ul>
+            </nav>
+            <a class="cta" href="contact-us.html"><button>Contact Us</button></a>
+        </header>
+        <main>
+        <h1>Home</h1><br>
+        <p>Welcome to FifthSplit.com. This is where you will find projects related to the FifthSplit social media channels.</p><br><br>
+        <a class="cta" href="search.html"><button>Search for your next festival!</button></a>
+
+        </main>
+        </div>
+        <footer id="footer">
+            <a style="font-style: italic;" href="#">FifthSplit.com, 2023</a>
         </footer>
-        </html>
+        </div>
+    </body>
+</html>
