--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <img class="logo" src="/assets/logo.png" alt="FifthSplit Logo">
             <nav>
                 <ul class="nav__links" >
-                    <li><a href="index.html">Home</a></li><li><a href="projects.html">Projects</a></li><li><a href="recents.html">Recent Videos</a></li><li><a href="about.html">About</a></li><a href="socials.html">Socials</a></li>
+                    <li><a href="index.html">Home</a></li><li><a href="projects.html">Projects</a></li><li><a href="recents.html">Recent Videos</a></li><li><a href="about.html">About</a></li><li><a href="socials.html">Socials</a></li>
                 </ul>
             </nav>
             <a class="cta" href="contact-us.html"><button>Contact Us</button></a>
