--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <main>
         <h1>Home</h1><br>
         <p>Welcome to FifthSplit.com. This is where you will find projects related to the FifthSplit social media channels.</p><br><br>
-        <a class="cta" href="search.html"><button>Search for your next festival!</button></a>
-
+        <h2>Latest Videos</h2><br>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/keVNivAwkwA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </main>
         </div>
         <footer id="footer">
