--- a/index.html
+++ b/index.html
@@ -25,7 +25,27 @@
         <h1>Home</h1><br>
         <p>Welcome to FifthSplit.com. This is where you will find projects related to the FifthSplit social media channels.</p><br><br>
         <h2>Latest Videos</h2><br>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/keVNivAwkwA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <table>
+          <tr>
+              <td><iframe width="560" height="315" src="https://www.youtube.com/embed/keVNivAwkwA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+              <td>NASCAR AI Series #1 - Kansas Speedway<br>
+                The NASCAR AI Series embarks on it's first race with the Xfinity Series cars at Kansas Speedway.
+                Sim: iRacing
+                Car: NASCAR Xfinity Toyota Supra
+                Track: Kansas Speedway</td></tr>
+              <tr>
+                  <td><img src="/festival-information-specialist/images/fest2.png" alt="Festival Image 2" width="350" height="200"></td>
+                  <td>Top Notch Festival | 14th Feb | £99.99<br>
+                  This is a festival where fans of 'Top Notch Audio' collate to admire the high quality product they are there to showcase. An approximated 1,500 fans arrived for the previous iteration of this event.</td></tr>
+              <tr>
+                  <td><img src="/festival-information-specialist/images/fest3.png" alt="Festival Image 3" width="350" height="200"></td>
+                  <td>Cheapo Festival | 17th Mar | £24.99<br>
+                  This is a festival for those who dislike the atmosphere of larger festivals such as Glastonbury, as well as the price.</td></tr>
+              <tr>    
+                  <td><img src="/festival-information-specialist/images/fest5.png" alt="Festival Image 5" width="350" height="200"></td>
+                  <td>Fyre Festival 2 | 2nd Apr | £4,936,924<br>
+                  Billy broke out. This is Fyre Festival 2, complete with all the 'luxury tents' and portable toilets you could ever need. Oh, and the artists might actually turn up this time. No guarantees or refunds.</td></tr>
+      </table>
         </main>
         </div>
         <footer id="footer">
