--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
           <tr>
               <td><iframe width="350" height="200" src="https://www.youtube.com/embed/keVNivAwkwA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
               <td>NASCAR AI Series #1 - Kansas Speedway<br>
-                The NASCAR AI Series embarks on it's first race with the Xfinity Series cars at Kansas Speedway.
-                Sim: iRacing
-                Car: NASCAR Xfinity Toyota Supra
+                The NASCAR AI Series embarks on it's first race with the Xfinity Series cars at Kansas Speedway.<br>
+                Sim: iRacing<br>
+                Car: NASCAR Xfinity Toyota Supra<br>
                 Track: Kansas Speedway</td></tr>
               <tr>
                   <td><img src="/festival-information-specialist/images/fest2.png" alt="Festival Image 2" width="350" height="200"></td>
