--- a/index.html
+++ b/index.html
@@ -34,9 +34,12 @@
                 Car: NASCAR Xfinity Toyota Supra<br>
                 Track: Kansas Speedway</td></tr>
               <tr>
-                  <td><img src="/festival-information-specialist/images/fest2.png" alt="Festival Image 2" width="350" height="200"></td>
-                  <td>Top Notch Festival | 14th Feb | £99.99<br>
-                  This is a festival where fans of 'Top Notch Audio' collate to admire the high quality product they are there to showcase. An approximated 1,500 fans arrived for the previous iteration of this event.</td></tr>
+                  <td><iframe width="350" height="200" src="https://www.youtube.com/embed/BsFY_H9OH-Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></td>
+                  <td>NASCAR AI Series #0 - Test Race at Charlotte Motor Speedway<br>
+                    The NASCAR AI Truck Series makes its first stop at the Charlotte Motor Speedway for a test race. <br>
+                    Sim: iRacing <br>
+                    Car: Ford F150 NASCAR CRAFTSMAN Truck <br>
+                    Track: Charlotte Motor Speedway (Oval)</td></tr>
               <tr>
                   <td><img src="/festival-information-specialist/images/fest3.png" alt="Festival Image 3" width="350" height="200"></td>
                   <td>Cheapo Festival | 17th Mar | £24.99<br>
