--- a/brand.html
+++ b/brand.html
@@ -23,11 +23,11 @@
         <h1>Brand Guidelines</h1>
         <p>The Typography and Colour on FifthSplit.com, and associated social media channels.</p><br>
         <h2>Typography</h2>
-        <p>FifthSplit websites make use of Mozilla's 'Zilla Slab' across all pages.</p>
-        <h1>FifthSplit</h1>
-        <h2>FifthSplit</h2>
-        <h3>FifthSplit</h3>
-        <p>FifthSplit</p>
+        <p>FifthSplit websites make use of Mozilla's 'Zilla Slab' across all pages.</p><br>
+        <h1>Title - Large</h1>
+        <h2>Title - Small</h2>
+        <h3>Body Text - Large</h3>
+        <p>Body Text - Small</p>
         </main>
     </body>
 </html>
