--- a/brand.html
+++ b/brand.html
@@ -27,7 +27,21 @@
         <h1>Title - Large</h1>
         <h2>Title - Small</h2>
         <h3>Body Text - Large</h3>
-        <p>Body Text - Small</p>
+        <p>Body Text - Small</p><br>
+        <h2>Colour</h2>
+        <h3>It's black and white.</h3>
+        <table>
+            <tr>
+                <td><img src="/assets/f0f0f0.png" alt="White, hex #f0f0f0"></td>
+                <td>Light</td>
+            </tr>
+                <tr>
+                    <td><img src="/assets/1a1a1a.png" alt="Black, hex #1a1a1a"></td>
+                    <td>Dark</td></tr>
+                <tr>
+                    <td><img src="/assets/D50032.png" alt="Red, hex #d50032"></td>
+                    <td>Red</td></tr>
+        </table>
         </main>
     </body>
 </html>
