--- a/brand.html
+++ b/brand.html
@@ -32,14 +32,14 @@
         <h3>It's black and white.</h3>
         <table>
             <tr>
-                <td><img src="/assets/f0f0f0.png" alt="White, hex #f0f0f0"></td>
+                <td><img width="200" height="200" src="/assets/f0f0f0.png" alt="White, hex #f0f0f0"></td>
                 <td>Light</td>
             </tr>
                 <tr>
-                    <td><img src="/assets/1a1a1a.png" alt="Black, hex #1a1a1a"></td>
+                    <td><img width="200" height="200" src="/assets/1a1a1a.png" alt="Black, hex #1a1a1a"></td>
                     <td>Dark</td></tr>
                 <tr>
-                    <td><img src="/assets/D50032.png" alt="Red, hex #d50032"></td>
+                    <td><img width="200" height="200" src="/assets/D50032.png" alt="Red, hex #d50032"></td>
                     <td>Red</td></tr>
         </table>
         </main>
