--- a/brand.html
+++ b/brand.html
@@ -24,10 +24,7 @@
         <p>The Typography and Colour on FifthSplit.com, and associated social media channels.</p><br>
         <h2>Typography</h2>
         <p>FifthSplit websites make use of Mozilla's 'Zilla Slab' across all pages.</p><br>
-        <h1>Title - Large</h1>
-        <h2>Title - Small</h2>
-        <h3>Body Text - Large</h3>
-        <p>Body Text - Small</p><br>
+        <img src="/assets/typography.png" alt="Typography">
         <h2>Colour</h2>
         <h3>It's black and white.</h3>
         <table>
