--- a/festival-information-specialist/social.html
+++ b/festival-information-specialist/social.html
@@ -21,12 +21,12 @@
             </nav>
             <a class="cta" href="contact-us.html"><button>Contact Us</button></a>
         </header>
-        <a href="https://twitter.com/festinfospec/">[twitter] /festinfospec</a>
-        <a href="https://instagram.com/festivalinformationspecialist">[instagram] /festivalinformationspecialist</a>
-        <a href="https://facebook.com/festivalinformationspecialist">[facebook] /festivalinformationspecialist</a>
-        <a href="https://linkedin.com/festival-information-specialist">[linkedin] /festival-information-specialist</a>
-        <a href="https://youtube.com/@festivalinfo">[youtube] /@festivalinfo</a>
-        <a href="https://pinterest.com/festinfo">[pinterest] /festinfo</a>
+        <h1><a href="https://twitter.com/festinfospec/">[twitter] /festinfospec</a></h1>
+        <h1><a href="https://instagram.com/festivalinformationspecialist">[instagram] /festivalinformationspecialist</a></h1>
+        <h1><a href="https://facebook.com/festivalinformationspecialist">[facebook] /festivalinformationspecialist</a></h1>
+        <h1><a href="https://linkedin.com/festival-information-specialist">[linkedin] /festival-information-specialist</a></h1>
+        <h1><a href="https://youtube.com/@festivalinfo">[youtube] /@festivalinfo</a></h1>
+        <h1><a href="https://pinterest.com/festinfo">[pinterest] /festinfo</a></h1>
         <footer id="footer">
             <a style="font-style: italic;" href="#">Festival Information Specialist</a>
         </footer>
