--- a/festival-information-specialist/social.html
+++ b/festival-information-specialist/social.html
@@ -20,13 +20,13 @@
                 </ul>
             </nav>
             <a class="cta" href="contact-us.html"><button>Contact Us</button></a>
-        </header>
-        <h1><a href="https://twitter.com/festinfospec/">[twitter] /festinfospec</a></h1>
-        <h1><a href="https://instagram.com/festivalinformationspecialist">[instagram] /festivalinformationspecialist</a></h1>
-        <h1><a href="https://facebook.com/festivalinformationspecialist">[facebook] /festivalinformationspecialist</a></h1>
-        <h1><a href="https://linkedin.com/festival-information-specialist">[linkedin] /festival-information-specialist</a></h1>
-        <h1><a href="https://youtube.com/@festivalinfo">[youtube] /@festivalinfo</a></h1>
-        <h1><a href="https://pinterest.com/festinfo">[pinterest] /festinfo</a></h1>
+        </header><br>
+        <h1><a href="https://twitter.com/festinfospec/">[twitter] /festinfospec</a></h1><br>
+        <h1><a href="https://instagram.com/festivalinformationspecialist">[instagram] /festivalinformationspecialist</a></h1><br>
+        <h1><a href="https://facebook.com/festivalinformationspecialist">[facebook] /festivalinformationspecialist</a></h1><br>
+        <h1><a href="https://linkedin.com/festival-information-specialist">[linkedin] /festival-information-specialist</a></h1><br>
+        <h1><a href="https://youtube.com/@festivalinfo">[youtube] /@festivalinfo</a></h1><br>
+        <h1><a href="https://pinterest.com/festinfo">[pinterest] /festinfo</a></h1><br>
         <footer id="footer">
             <a style="font-style: italic;" href="#">Festival Information Specialist</a>
         </footer>
