--- a/festival-information-specialist/contact-us.html
+++ b/festival-information-specialist/contact-us.html
@@ -21,4 +21,10 @@
             </nav>
             <a class="cta" href="contact-us.html"><button>Contact Us</button></a>
         </header>
-        
+        <footer id="footer">
+            <a style="font-style: italic;" href="#">Festival Information Specialist</a>
+        </footer>
+        </div>
+        </div>
+        </body>
+        </html>
