--- a/festival-information-specialist/about-us.html
+++ b/festival-information-specialist/about-us.html
@@ -23,5 +23,8 @@
         <h1>About Us</h1>
         <p>Welcome to Festival Information Specialist, the go-to location to search for festivals in your region. This site allows you to search by county, as well as more in depth filters based around the type of festival, as well as more specific locations. We also host a variety of other pages that allow our users to view various photos of previous festivals, learn more about what we do, view our social media pages, as well as view the popular festivals in the user's region.</p>
         </main>
+        <footer id="footer">
+            <a style="font-style: italic;" href="#">Festival Information Specialist</a>
+        </footer>
     </body>
 </html>
