--- a/festival-information-specialist/404.html
+++ b/festival-information-specialist/404.html
@@ -23,5 +23,8 @@
         <h1>Error 404</h1>
         <p>You've reached a page that doesn't exist! Try the links in the header above, or use the contact us button if you have any issues.</p>
         </main>
+        <footer id="footer">
+            <a style="font-style: italic;" href="#">Festival Information Specialist</a>
+        </footer>
     </body>
 </html>
