--- a/festival-information-specialist/contact-us.html
+++ b/festival-information-specialist/contact-us.html
@@ -21,8 +21,10 @@
             </nav>
             <a class="cta" href="contact-us.html"><button>Contact Us</button></a>
         </header>
+        <main>
         <h1>Contact Us</h1>
         <p>Use the form below to send our support team a message. We'll get back to you as soon as we can!</p>
+        </main>
         <footer id="footer">
             <a style="font-style: italic;" href="#">Festival Information Specialist</a>
         </footer>
