--- a/festival-information-specialist/search.html
+++ b/festival-information-specialist/search.html
@@ -21,6 +21,10 @@
             </nav>
             <a class="cta" href="contact-us.html"><button>Contact Us</button></a>
         </header>
+        <main>
+            <h1>Search</h1>
+            <p>Use the search function below to find your desired festival!</p>
+        </main>
         <footer id="footer">
             <a style="font-style: italic;" href="#">Festival Information Specialist</a>
         </footer>
