--- a/festival-information-specialist/index.html
+++ b/festival-information-specialist/index.html
@@ -33,7 +33,14 @@
         </main>
         </div>
         <footer id="footer">
-            <a style="font-style: italic;" href="#">Festival Information Specialist</a>
+            <div class="iconHolder">
+                <img class="logo" src="/festival-information-specialist/socialLogos/pinterest.svg" alt="Pinterest">
+                <img class="logo" src="/festival-information-specialist/socialLogos/youtube.svg" alt="YouTube">
+                <img class="logo" src="/festival-information-specialist/socialLogos/linkedin.svg" alt="LinkedIn">
+                <img class="logo" src="/festival-information-specialist/socialLogos/facebook.svg" alt="Facebook">
+                <img class="logo" src="/festival-information-specialist/socialLogos/instagram.svg" alt="Instagram">
+                <img class="logo" src="/festival-information-specialist/socialLogos/twitter.svg" alt="Twitter">
+            </div>
         </footer>
         </div>
     </body>
