--- a/festival-information-specialist/index.html
+++ b/festival-information-specialist/index.html
@@ -34,12 +34,12 @@
         </div>
         <footer id="footer">
             <div class="iconHolder">
-                <img class="logo" src="/festival-information-specialist/socialLogos/pinterest.svg" alt="Pinterest">
-                <img class="logo" src="/festival-information-specialist/socialLogos/youtube.svg" alt="YouTube">
-                <img class="logo" src="/festival-information-specialist/socialLogos/linkedin.svg" alt="LinkedIn">
-                <img class="logo" src="/festival-information-specialist/socialLogos/facebook.svg" alt="Facebook">
-                <img class="logo" src="/festival-information-specialist/socialLogos/instagram.svg" alt="Instagram">
-                <img class="logo" src="/festival-information-specialist/socialLogos/twitter.svg" alt="Twitter">
+                <img class="icon" src="/festival-information-specialist/socialLogos/pinterest.svg" alt="Pinterest">
+                <img class="icon" src="/festival-information-specialist/socialLogos/youtube.svg" alt="YouTube">
+                <img class="icon" src="/festival-information-specialist/socialLogos/linkedin.svg" alt="LinkedIn">
+                <img class="icon" src="/festival-information-specialist/socialLogos/facebook.svg" alt="Facebook">
+                <img class="icon" src="/festival-information-specialist/socialLogos/instagram.svg" alt="Instagram">
+                <img class="icon" src="/festival-information-specialist/socialLogos/twitter.svg" alt="Twitter">
             </div>
         </footer>
         </div>
