--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="base.css">
     </head>
     <body>
-        <h1>FifthSplit Electronics is coming soon.</h1>
-        <h2>Please check back later.</h2>
+        <h1>The launch of FifthSplit Electronics has been delayed.</h1>
+        <h2>Please check back on 10th March 2023.</h2>
     </body>
 </html>
