--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="stylesheet" href="base.css">
+        <meta http-equiv="refresh" content="2; URL='https://www.ebay.co.uk/usr/fifthsplit-electronics'" />
     </head>
     <body>
-        <h1>Hi! We're launching soon.</h1>
-        <h2>Please try again later.</h2>
-        <br><br><br><br>
+        <h1>You're being redirected.</h1>
+        <h2>If you aren't redirected to our eBay page within 2 seconds, <a href="https://www.ebay.co.uk/usr/fifthsplit-electronics">click here.</a></h2>
+        <br>
         <p>FifthSplit Electronic Repairs Ltd, 2023</p>
     </body>
 </html>
