--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Coming Soon - FifthSplit Electronics</title>
+        <title>Redirecting - FifthSplit Electronics</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <link rel="stylesheet" href="base.css">
