--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <h1>You're being redirected.</h1>
         <h2>If you aren't redirected to our eBay page within 2 seconds, <a href="https://www.ebay.co.uk/usr/fifthsplit-electronics">click here.</a></h2>
         <br>
-        <p>FifthSplit Electronic Repairs Ltd, 2023</p>
+        <p>FifthSplit Electronics, 2023</p>
     </body>
 </html>
